--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
 
+
+xcuserdata/
+xcshareddata/
+
+*.xcscmblueprint
+*.xccheckout
+
+build/
+DerivedData/
+
 BMSCredentials.plist
 Pods/
 Podfile.lock
